--- a/styles/about.css
+++ b/styles/about.css
@@ -1,5 +1,33 @@
 /* About Page*/
 
+
+.hero-content {
+  position: relative;
+  display: block;
+}
+
+.hero-image {
+  position: absolute;
+  left: 15.1%;
+  right: 54.6%;
+  top: 4.78%;
+  bottom: 77.58%;
+  float: left;
+}
+
+.hero-content h1 {
+  display: inline-block;
+  position: relative;
+  float: left;
+  text-align: center;
+  position: absolute;
+  left: 45.4%;
+  right: 15.36%;
+  top: 4.78%;
+  bottom: 77.58%;
+
+}
+
 .about-description-table {
   display: table;
   position: absolute;
@@ -31,12 +59,6 @@
   float: right;
 }
 
-.about-icons {
-  clear: both;
-  position: relative;
-  float: right;
-}
-
 .about-content {
   clear:both;
   margin: auto;
@@ -50,19 +72,12 @@
   color: purple;
 }
 
-.mooboard clearfix{
+.moodboard {
   position: relative;
+  margin-bottom: 3rem;
 }
 
 .moodboard img {
   width: 100%;
   height: auto;
-}
-
-.clearfix:after {
-   content: ".";
-   visibility: hidden;
-   display: block;
-   height: 0;
-   clear: both;
 }
