--- a/styles/main.css
+++ b/styles/main.css
@@ -11,55 +11,31 @@ html {
 
 body {
   background-color: #FFFCFC;
+  font-family: 'Quicksand', sans-serif;
+  letter-spacing: 0.64px;
+  line-height: 25px;
 }
 
-/* NAV BAR*/
-.navbar {
-  height: 100px;
-  padding: 0.5rem;
-  z-index: 1;
+header {
+  background: rgb(102,191,145);
+  background: linear-gradient(166deg, rgba(102,191,145,0.67) 0%,
+  rgba(245,203,205,0.78) 65%,
+  rgba(251,234,89,0.38) 100%);
+  padding-top: 3rem;
+  padding-bottom: 5rem;
 }
 
-.navbar .logo {
-  position: relative;
-  left: 1rem;
+.logo {
+  padding: 50px;
 }
 
-.logo img {
-  height: 75px;
-  margin: auto;
+.intro, .contact {
+    margin: auto;
+    width: 56.4236111111111%;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
-.navbar .links-container {
-  display: table;
-  position: absolute;
-  top: 0;
-  right: 1rem;
-  height: 100px;
-}
-
-.links-container .navbar-link {
-  display: table-cell;
-  position: relative;
-  height: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  vertical-align: middle;
-  letter-spacing: 0.05rem;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.links-container .navbar-link:hover {
-  color: #FBEA59;
-  font-weight: 700;
-}
-
-.links-container .navbar-link:active {
-  color: black;
-}
-
-/*TEXT */
 h1 {
   font-size: 2.4rem;
 }
@@ -69,53 +45,102 @@ h1, h2 {
   min-height: 100%;
 }
 
-h3, body {
+h3 {
   font-family: 'Quicksand', sans-serif;
   color: black;
   min-height: 100%;
-}
-
-h5 {
-  font-family: 'Quicksand', sans-serif;
-  font-weight: normal;
-  font-size: 1rem;
+  text-transform: uppercase;
 }
 
 
-
-/* footer */
-.footer-info {
-  background-color: #6ABE93;
-  padding: 0.5rem;
-  display: block;
+/* NAV BAR*/
+nav {
+  height: 100px;
+  padding-top: 0.5rem;
+  padding-left: .5rem;
+  padding-right: .5rem;
+  padding-bottom: 0;
+  z-index: 1;
 }
 
-.footer-contact-list {
+.logo img {
+  height: 75px;
+}
+
+ul {
+  float: right;
+}
+
+li {
   display: inline-block;
-  list-style: none;
-  font-family: FontAwesome;
-  margin-left: 3rem;
-}
-
-.footer-contact-list i {
-  color: white;
-  display: inline-block;
-  font-size: 25px;
-}
-
-.right-side-footer {
-  text-align: right;
+  height: 100%;
+  padding-left: 1rem;
   padding-right: 1rem;
-  font-size: 10px;
+  letter-spacing: 0.05rem;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 400rem;
-  vertical-align: middle;
+li a {
+  text-decoration: none;
+  color: black;
 }
 
-/* GRID system */
+li a:hover {
+  font-weight: 700;
+  color: #6ABE93;
+}
+
+section {
+  clear: both;
+  margin-top: 20px;
+}
+
+.contact {
+  padding-top: 5rem;
+  padding-bottom: 10rem;
+}
+
+button {
+  background: #66BF91;
+  color: white;
+  padding: 10px;
+}
+
+button:hover {
+  background: rgba(251,234,89,0.38);
+}
+
+
+/* Footer */
+.footer-info {
+  clear: both;
+  background-color: #6ABE93;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+}
+
+.icons {
+  display: inline-block;
+  float: left;
+}
+
+.icons li a i {
+  color: white;
+  font-family: FontAwesome;
+  float: left;
+}
+
+.icons li a i:hover {
+  color: #950444;
+}
+
+.copyright {
+  display: inline-block;
+  float: right;
+}
+
+/*
+/* GRID system
 .column {
   float: left;
   padding: 3rem 3rem 3rem 3rem;
@@ -129,7 +154,8 @@ h5 {
 .column .flow-opposite { float: right; }
  }
 
-/* MEDIA Queries */
+
+/* MEDIA Queries
 @media (min-width: 640px) {
   html { font-size: 112%; }
 }
