--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,6 @@ html {
 body {
   background-color: #FFFCFC;
   font-family: 'Quicksand', sans-serif;
-  letter-spacing: 0.64px;
   line-height: 25px;
 }
 
@@ -61,6 +60,10 @@ nav {
   padding-right: .5rem;
   padding-bottom: 0;
   z-index: 1;
+}
+
+nav .hamburger {
+  display: none;
 }
 
 .logo img {
@@ -139,23 +142,49 @@ button:hover {
   float: right;
 }
 
-/*
-/* GRID system
-.column {
-  float: left;
-  padding: 3rem 3rem 3rem 3rem;
+
+
+/* MEDIA Queries*/
+/*nav bar*/
+@media screen and (max-width: 600px) {
+  nav.hamburger a:not(:first-child) {
+    display: none;
+  }
+  nav a.hamburger {
+    float: right;
+    display: block;
+  }
+  .nav-bar a {
+    display: none;
+  }
+  .nav-bar.responsive {
+    position: relative;
+  }
+  nav.responsive a.hamburger {
+    position: absolute;
+    right: 0;
+    top: 0;
+    }
+  .nav-bar.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+  }
+
+  /*footer*/
+  .footer-info .copyright {
+    display: none;
+  }
+  .footer-info {
+    width: 100%;
+    clear: both;
+  }
 
 }
-.column .full { width: 100%; }
-.column .two-thirds { width: 66.7%; }
-.column .half { width: 50%; }
-.column .third { width: 33.3%; }
-.column .fourth { width: 25%; }
-.column .flow-opposite { float: right; }
- }
 
 
-/* MEDIA Queries
+
+/*
 @media (min-width: 640px) {
   html { font-size: 112%; }
 }
