--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,7 @@ ul {
 }
 
 li {
-  display: inline-block;
+  display: block;
   height: 100%;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -115,14 +115,13 @@ button:hover {
 
 /* Footer */
 .footer-info {
-  clear: both;
   background-color: #6ABE93;
   width: 100%;
   position: fixed;
   bottom: 0;
 }
 
-.icons {
+.footer-info .icons li {
   display: inline-block;
   float: left;
 }
@@ -130,7 +129,6 @@ button:hover {
 .icons li a i {
   color: white;
   font-family: FontAwesome;
-  float: left;
 }
 
 .icons li a i:hover {
@@ -147,6 +145,9 @@ button:hover {
 /* MEDIA Queries*/
 /*nav bar*/
 @media screen and (max-width: 600px) {
+  h1 {
+    line-height: 3rem;
+  }
   nav.hamburger a:not(:first-child) {
     display: none;
   }
@@ -165,10 +166,13 @@ button:hover {
     right: 0;
     top: 0;
     }
-  .nav-bar.responsive a {
+
+  .nav-bar.responsive li a {
+    text-decoration: none;
     float: none;
     display: block;
-    text-align: right;
+    text-align: left;
+    padding-right: 3rem;
   }
 
   /*footer*/
@@ -176,12 +180,15 @@ button:hover {
     display: none;
   }
   .footer-info {
-    width: 100%;
-    clear: both;
+
   }
 
 }
-
+@media screen and (min-width: 600px) {
+  nav li {
+    display: inline-block;
+  }
+}
 
 
 /*
