--- a/styles/about.css
+++ b/styles/about.css
@@ -1,83 +1,34 @@
 /* About Page*/
 
-
-.hero-content {
-  position: relative;
-  display: block;
+.about-me .hero {
+  padding-bottom: 0;
 }
 
-.hero-image {
-  position: absolute;
-  left: 15.1%;
-  right: 54.6%;
-  top: 4.78%;
-  bottom: 77.58%;
-  float: left;
+.about-me header {
+  padding-bottom: 0;
 }
 
-.hero-content h1 {
-  display: inline-block;
-  position: relative;
-  float: left;
-  text-align: center;
-  position: absolute;
-  left: 45.4%;
-  right: 15.36%;
-  top: 4.78%;
-  bottom: 77.58%;
-
-}
-
-.about-description-table {
-  display: table;
-  position: absolute;
-  height: 25rem;
-  margin-left: 10rem;
-  margin-right: 10rem;
-  margin-top: -3.5rem;
-  z-index: -1;
-}
-
-.about-description-table img {
-  float: left;
-  width: 50%;
-}
-
-.about-container {
-  display: table-cell;
-  height: auto;
+.photo img {
   width: 100%;
-  vertical-align: middle;
 }
 
-.about-description-text {
-  background-color: #6ABE93;
-  width: 50%;
-  text-align: center;
-  padding:  30% 5% 0 5%;
+.about {
   margin: auto;
-  float: right;
-}
-
-.about-content {
-  clear:both;
-  margin: auto;
-  width: 50%;
-  padding: 5rem;
-}
-
-.about-content-text {
-  position: relative;
-  display: block;
-  color: purple;
-}
-
-.moodboard {
-  position: relative;
-  margin-bottom: 3rem;
+  width: 56.4236111111111%;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .moodboard img {
   width: 100%;
   height: auto;
+  margin-bottom: 5rem;
 }
+
+/*Media Queries*/
+@media screen and (max-width: 783px) {
+  .about {
+    width: 100%;
+    display: block;
+    padding: 3rem;
+  }
