--- a/styles/main.css
+++ b/styles/main.css
@@ -49,6 +49,7 @@ h3 {
   color: black;
   min-height: 100%;
   text-transform: uppercase;
+  font-weight: normal;
 }
 
 
@@ -105,7 +106,8 @@ section {
 button {
   background: #66BF91;
   color: white;
-  padding: 10px;
+  padding: 15px;
+  border: 0;
 }
 
 button:hover {
