--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,7 @@ html {
 body {
   background-color: #FFFCFC;
   font-family: 'Quicksand', sans-serif;
+  font-weight: normal;
   line-height: 25px;
 }
 
@@ -37,6 +38,7 @@ header {
 
 h1 {
   font-size: 2.4rem;
+  padding-bottom: 2rem;
 }
 
 h1, h2 {
@@ -50,6 +52,7 @@ h3 {
   min-height: 100%;
   text-transform: uppercase;
   font-weight: normal;
+  padding-top: 1rem;
 }
 
 
@@ -195,14 +198,4 @@ button:hover {
   nav li {
     display: inline-block;
   }
-}
-
-
-/*
-@media (min-width: 640px) {
-  html { font-size: 112%; }
-}
-
-@media (min-width:1024px) {
-  html { font-size: 120%; }
 }
