--- a/styles/landing.css
+++ b/styles/landing.css
@@ -11,32 +11,16 @@ nav .rose-branch {
   height: 30px;
 }
 
-.intro .learn-more {
-  font-size: 1.2rem;
-}
-
-a {
-  color: black;
-}
-
-a:hover {
-  color: #950444;
-}
-
-section {
-  clear: both;
-}
-
 /* project list */
 .projects {
-  margin: auto;
-  width: 77.041666666667%;
   padding-top: 5rem;
   padding-bottom: 10rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .projects .text {
-  width: 50.6711409395973%;
+  width: 50%;
   padding: 2rem;
 }
 
@@ -46,8 +30,8 @@ section {
 }
 
 .projects .img img {
-  width: 47.1142520612485%;
-  height:auto;
+  width: 50%;
+  height: auto;
   padding: 3rem;
 }
 
@@ -142,11 +126,14 @@ section {
   .projects {
     width: 100%;
     display: block;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .projects .overlay{
     display: none;
   }
+
   .projects .text {
     width: 100%;
     margin:auto;
