--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,10 +1,10 @@
 .contact-me .hero {
-  padding-bottom: 0;
+  padding-bottom: 15rem;
 }
-
 
 .hero .contact-icons {
   float: left;
+  padding-left: 5rem;
 }
 
 .hero .contact-icons li {
@@ -13,6 +13,7 @@
 
 .hero .contact-icons li a i {
   font-family: FontAwesome;
+  font-size: 5rem;
 }
 
 .hero .contact-icons li a i:hover {
