--- a/styles/rfs.css
+++ b/styles/rfs.css
@@ -92,6 +92,11 @@ section {
   clear: both;
 }
 
+.competition img {
+  box-shadow: -2px 2px 30px rgba(0, 0, 0, 0.5);
+
+}
+
 .box p {
   padding: 0;
 }
