--- a/styles/landing.css
+++ b/styles/landing.css
@@ -13,15 +13,9 @@ nav .rose-branch {
 
 /* project list */
 .projects {
-  padding-top: 5rem;
-  padding-bottom: 10rem;
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.projects .text {
-  width: 50%;
-  padding: 2rem;
+  clear: both;
+  width: 100%;
+  height: 100%;
 }
 
 .text a:hover {
@@ -29,39 +23,62 @@ nav .rose-branch {
   color: #950444;
 }
 
-.projects .img img {
-  width: 50%;
-  height: auto;
-  padding: 3rem;
-}
-
-.first .img img {
-  float: left;
-  display: inline;
+.project-block-rfs {
   background: rgb(89,51,75);
   background: linear-gradient(166deg, rgba(89,51,75,1) 0%,
   rgba(165,137,154,1) 62%, rgba(89,51,75,1) 100%);
+  padding-top: 3rem;
+  padding-bottom: 5rem;
+  height: 100%;
+  width: 100%;
+  display: block;
 }
 
-.first .text {
-  float: right;
-  display: inline;
-}
-
-.second {
-  padding-top: 10rem;
-  clear: both;
-}
-
-.second .text {
-  float: left;
-}
-
-.second .img img {
-  float: right;
+.project-block-coop {
   background: rgb(229,58,32);
   background: linear-gradient(112deg, rgba(229,58,32,1) 0%, rgba(212,176,140,1) 38%,
   rgba(172,216,217,1) 100%);
+  padding-top: 3rem;
+  padding-bottom: 5rem;
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+
+.content {
+  padding: 5rem;
+  clear: none;
+}
+
+.content p {
+  clear: both;
+}
+
+.first {
+  width: 50%;
+  display: inline-block;
+  float: left;
+  padding: 1rem;
+  clear: both;
+}
+
+.first img {
+  float: left;
+  display: inline;
+  width: 100%;
+}
+
+.second {
+  width: 50%;
+  display: inline-block;
+  float: right;
+  padding: 5rem;
+  clear: none;
+}
+
+.second a {
+  text-decoration: none;
+  color: white;
 }
 
 /*OVERLAYs*/
